Changes for 4.0.6rc1

New features:
...G...... [ZBXNEXT-4898] added support IPv6 for "net.dns" and "net.dns.record" (MVekslers)
.......PS. [ZBXNEXT-5037] added "skip" parameter for vmware.eventlog key (MVekslers)
..F....... [ZBXNEXT-4819] implemented date and time showing in SVG graph widget (miks)

Bug fixes:
..F....... [ZBX-15483] fixed undefined index in Item Prototype update (vasilijs)
..F....... [ZBX-15270] fixed graph widget configuration form cross browser issues (agriscenko)
..F....... [ZBX-15300] fixed widgets extra space at the bottom (ashubin, vasilijs)
...G...... [ZBX-8091] added alphabetic ordering of net.dns.record respond (akozlovs)
..F....... [ZBX-15707] fixed check box design when drag and drop an interface into SNMP (vasilijs)
..F....... [ZBX-15535] fixed validation of min/max value range in graph widget; fixed translation string in graph widget (miks)
..F....... [ZBX-15648] removed unused WIDGET_HAT_EVENTACTIONMCMDS and WIDGET_HAT_EVENTACTIONMSGS constants (agriscenko)
A.F....... [ZBX-15386] fixed Trigger overview not showing OK triggers (vasilijs)
A.F....... [ZBX-14538] fixed error message when value of lifetime or history/trends storage period is out of range (agriscenko)
A.F....... [ZBX-15614] fixed validation of y axis item on classic graph create and update (agriscenko)
..F....... [ZBX-15226] fixed missing visual gap under page title (gcalenko)
..F....... [ZBX-15560] fixed incorrect URL argument formatting when parameters are non-indexed arrays (Ivo)
..F....... [ZBX-15719] fixed undefined index in trigger expression popup (Ivo)
..F....... [ZBX-15332] fixed dashboard svg graph update on timeselector interval change (gcalenko)
...G...... [ZBX-15728] fixed agent startup problem in Win 2008 R2 w/o SP1, removed dependency on version helper API (kalimulin)
..F....... [ZBX-15622] fixed trigger expression test dialog not being usable with long trigger expressions (talbergs)